--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "startd": "webpack-dev-server --inline --progress --port 8080",
-    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
+    "build": "rimraf build && webpack --config config/webpack.prod.js --progress --profile --bail",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
     "rxjs": "^5.1.0",
+    "web3": "^0.18.2",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/node": "~6.0.60",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.4",
+    "babel-loader": "^6.3.2",
     "bootstrap-loader": "^2.0.0-beta.20",
     "codelyzer": "~2.0.0-beta.4",
     "css-loader": "^0.26.2",
