--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
     "rxjs": "^5.1.0",
+    "typescript": "^2.2.1",
     "web3": "^0.18.2",
     "zone.js": "^0.7.6"
   },
@@ -62,11 +63,11 @@
     "rimraf": "^2.5.2",
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
-    "truffle-default-builder": "^2.0.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.4.2",
     "typescript": "~2.0.0",
     "url-loader": "^0.5.8",
+    "web3-loader": "^1.1.2",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.4.1",
     "webpack-merge": "^3.0.0"
