working web3 on dev version

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": "",
-    "declaration": false,
-    "declarationDir": null,
+    "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [
@@ -18,8 +17,6 @@
     "typeRoots": [
       "../node_modules/@types"
     ],
-    "allowJs": true,
-    "inlineSources": true,
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true
   }
