--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "startd": "webpack-dev-server --inline --progress --port 8080",
-    "build": "rimraf build && webpack --config config/webpack.prod.js --progress --profile --bail",
+    "build": "rimraf build && webpack --config config/webpack.prod.js --progress --profile ",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -26,7 +26,6 @@
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
     "rxjs": "^5.1.0",
-    "typescript": "^2.2.1",
     "web3": "^0.18.2",
     "zone.js": "^0.7.6"
   },
@@ -63,11 +62,11 @@
     "rimraf": "^2.5.2",
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
+    "truffle-default-builder": "^2.0.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.4.2",
     "typescript": "~2.0.0",
     "url-loader": "^0.5.8",
-    "web3-loader": "^1.1.2",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.4.1",
     "webpack-merge": "^3.0.0"
