--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "startd": "webpack-dev-server --inline --progress --port 8080",
-    "build": "rimraf build && webpack --config config/webpack.prod.js --progress --profile ",
+    "build": " webpack --config config/webpack.prod.js --progress --profile ",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -22,10 +22,13 @@
     "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
+    "@types/lodash": "^4.14.54",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
     "rxjs": "^5.1.0",
+    "truffle-contract": "^1.1.10",
     "web3": "^0.18.2",
     "zone.js": "^0.7.6"
   },
@@ -46,6 +49,7 @@
     "html-webpack-plugin": "^2.16.1",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
+    "json-loader": "^0.5.4",
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
@@ -63,9 +67,10 @@
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
     "truffle-default-builder": "^2.0.0",
+    "truffle-solidity-loader": "0.0.8",
     "ts-node": "~2.0.0",
     "tslint": "~4.4.2",
-    "typescript": "~2.0.0",
+    "typescript": "~2.1.0",
     "url-loader": "^0.5.8",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.4.1",
